# switchyard

./: .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  .npmrc  AGENTS.md  CLAUDE.md  CODEX_BOOTSTRAP_PROMPT.md  CODEX_START_HERE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  SWITCHYARD_IMPLEMENTATION_PLAN.md  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  sqlc.yaml
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  dependabot.yml  pull_request_template.md  release.yml
.reuse/: dep5
.switchyard/: project.yml
api/: async-events.md  oapi-codegen.yaml  openapi.yaml
design/: DESIGN_REFERENCE.md  README.md  switchyard-ui-mockup.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: compatibility.rs  lib.rs  main.rs  model.rs  navigation.rs  notifications.rs  preferences.rs  sidecar.rs  tray.rs  updater.rs
docs/: adapter-development.md  cli.md  compatibility.md  desktop-installation.md  federation.md  getting-started.md  glossary.md  index.md  manifest-reference.md  mcp.md  migration-v1.md  platform-support.md  plugin-sdk.md  privacy.md  public-site-launch-checklist.md  public-site.md  release.md  settings.md  support-bundles.md  team-configuration.md  troubleshooting.md
migrations/: 00001_system_health.sql  00002_operations_kernel.sql  00003_project_catalog.sql  00004_native_process_runs.sql  00005_observability.sql  00006_ports_actions.sql  embed.go  (+11 more)
(+872 files in other folders)
