[package]
name = "switchyard-desktop"
version = "1.0.0"
description = "Thin native desktop shell for Switchyard"
authors = ["Switchyard contributors"]
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
name = "switchyard_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "switchyard-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
semver = "=1.0.28"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tauri = { version = "=2.11.5", features = ["tray-icon"] }
tauri-plugin-autostart = "=2.5.1"
tauri-plugin-deep-link = "=2.4.9"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-shell = "=2.3.5"
tauri-plugin-single-instance = "=2.4.3"
tauri-plugin-updater = "=2.10.1"
url = "=2.5.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
